# hhru

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml  vacancies.json
data/: file_handlers.py  file_storage.py  vacancy.py
src/: base_api.py  head_hunter.py
tests/: test_base_api.py  test_file_handlers.py  test_file_storage.py  test_filters.py  test_head_hunter.py  test_helpers.py  test_main.py  test_vacancy.py
utils/: filters.py  helpers.py
