[project]
name = "pythonproject20"
version = "0.1.0"
description = ""
authors = [
    {name = "Суспицын Евгений",email = "evgen.es21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.19.1"

[tool.isort]
profile = "black"
line_length = 119
skip_gitignore = true
atomic = true
